# HPS-Sharescreen

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  idle-image.js  idle-image.ts  package-lock.json  package.json  registration-image.js  server.js  start.sh  turnserver.conf
pi-setup/: display.sh  kiosk.sh  receiver.py  recover.sh  setup.sh  sharescreen-update.sh
public/: admin.html  debug.js  display.html  share.html
public/screens/: registration.html
receiver/: CMakeLists.txt  build.sh
receiver/src/: main.cpp  pipeline.cpp  pipeline.h  signaling.cpp  signaling.h
wpe-build/: Dockerfile  build.sh
